force-app/main/default/objects/vlocity_cmt__AccountProductRollup__c/vlocity_cmt__AccountProductRollup__c.object-meta.xml
<CustomObject>
    <description>Stores Product and Category Quantity rollups for Account.</description>
    <label>Account Product Rollup</label>
    <nameField>
        <label>Account Product Rollup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Product Rollups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>