force-app/main/default/objects/vlocity_cmt__AccountProductRollup__c/fields/vlocity_cmt__CatalogCategoryId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__CatalogCategoryId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the Catalog Id for which the rollup quantity is stored.</description>
    <label>Catalog Category</label>
    <referenceTo>vlocity_cmt__Catalog__c</referenceTo>
    <relationshipLabel>Account Product Rollups</relationshipLabel>
    <relationshipName>AccountProductRollups</relationshipName>
    <type>Lookup</type>
</CustomField>