force-app/main/default/objects/vlocity_cmt__AccountProductRollup__c/fields/vlocity_cmt__TotalAssetQuantity__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__TotalAssetQuantity__c</fullName>
    <description>Stores the total assets rollup quantity</description>
    <label>Total Asset Quantity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>